--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "postcss-load-config": "^6.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
